Update 3. Making Comparisons.md

--- a/Python - Day 7 - Boolean-Comparisons-Conditionals/3. Making Comparisons.md
+++ b/Python - Day 7 - Boolean-Comparisons-Conditionals/3. Making Comparisons.md
@@ -27,6 +27,8 @@ Behold the six relational operators Python has in its arsenal:
 ## Task 2 - Predict ⚔️
 Time to put on your prediction hat! 🎩 Take a look at the conditions below and, using your intuition, label each with either ``True`` or ``False``.
 
+Note: ``x = 1, y = 0`` and ``z = −1.``
+
 ![image](image_7.png)
 
 <details>
