Update 1. if statements.md

--- a/Python - Day 8 - if-elif-else/1. if statements.md
+++ b/Python - Day 8 - if-elif-else/1. if statements.md
@@ -16,7 +16,7 @@ Let’s go back to the automatic checkout.
 
 Here the shopper will be asked if they have a loyalty card. If the answer is “Y” the computer will invite the customer to scan their card. If the customer does not answer “Y”, the loyalty card clause is skipped and the main program continues.
 
-👉 Type the following in `main.py`
+👉 Type the following in `Thonny`
 ````py
 answer = input("Do you have a loyalty card? (Y/N) ")
 ````
