--- a/Python - Day 8 - if-elif-else/2. else.md
+++ b/Python - Day 8 - if-elif-else/2. else.md
@@ -19,7 +19,7 @@ Returning to the checkout example, we will add the code for a second branch, usi
 Make sure that the cursor is lined underneath the ``if`` in your 
 previous program. 
 
-👉 Type the following in `main.py`:
+👉 Type the following in `Thonny`:
 ````py
 else:
 ````
