--- a/Python - Day 8 - if-elif-else/3. elif.md
+++ b/Python - Day 8 - if-elif-else/3. elif.md
@@ -11,7 +11,7 @@ cash, card or coupon.
 
 ## Task 3 👨‍💻
 
-👉 Start a new script in `main.py` by typing the following:
+👉 Start a new script in `Thonny` by typing the following:
 ````py
 payType = input("Do you want to pay using cash, card or coupon?")
 ````
