--- a/Python - Day 8 - if-elif-else/3. elif.md
+++ b/Python - Day 8 - if-elif-else/3. elif.md
@@ -18,7 +18,7 @@ payType = input("Do you want to pay using cash, card or coupon?")
 👉 Add an ``if`` statement, using a Boolean expression to test for the first condition, just as before:
 ````py
 if payType == "cash":
-  print("Please insert cash.”)
+  print("Please insert cash.")
 ````
 👉 After the ``if`` statement and lined up with ``if``, add your 
 ``elif`` statement, using a Boolean expression to test for the
@@ -29,7 +29,7 @@ elif payType == "card":
 
 Remember to *indent* the next line and type:
 ````py
-  print("Insert card into machine.”)
+  print("Insert card into machine.")
 ````
 💡 Make sure that you put the colons in the right places.
 
